Corrected overflow and min body width

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -41,6 +41,7 @@ html, body {
 
 body {
   background-color: black;
+  min-width: 780px;
 }
 
 h1 {
@@ -125,6 +126,7 @@ a:active {color: grey;}
   height: 100%;
   margin-left: 260px;
   position: absolute;
+  overflow-y: auto;
 }
 
 #arrow_left {
@@ -218,6 +220,8 @@ a:active {color: grey;}
 .thumbnail {
   float: left;
   margin: 21px;
+  width: 310px;
+  height: 310px;
 }
 
 .line_break {
@@ -239,7 +243,7 @@ a:active {color: grey;}
   float: right;
   height: 100%;
   overflow-y: auto;
-  width: 550px;
+  width: 460px;
   padding: 0 30px 0 30px;
   background-color: black;
 }
